kubernetes/file-upload-service.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: file-upload-service
  labels:
    app.kubernetes.io/name: file-upload-service
    app.kubernetes.io/component: app-server
    app.kubernetes.io/part-of: file-upload-service
    env: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: file-upload-service
      env: staging
  serviceName: file-upload-service-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: file-upload-service
        app.kubernetes.io/component: app-server
        app.kubernetes.io/part-of: file-upload-service
        env: staging
    spec:
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: file-upload-service
          image: 'ghcr.io/jockihendry/latihan-k8s-file-upload-service:sha-1b2ddf4' # kpt-set: ghcr.io/jockihendry/latihan-k8s-file-upload-service:${file_upload_service_version}
          livenessProbe:
            httpGet:
              path: /health
              port: 6060
            periodSeconds: 60
          volumeMounts:
            - name: uploads
              mountPath: /uploads
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
        - name: nginx
          image: 'nginx:1.21-alpine'
          ports:
            - name: web
              containerPort: 8080
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
              readOnly: true
            - name: uploads
              mountPath: /uploads
      volumes:
        - name: nginx-config
          configMap:
            name: file-upload-service-nginx-config
            items:
              - key: nginx.conf
                path: file-upload-service.conf
        - name: uploads
          persistentVolumeClaim:
            claimName: file-upload-storage-claim
---
apiVersion: v1
kind: Service
metadata:
  name: file-upload-service
  labels:
    app.kubernetes.io/name: file-upload-service
    app.kubernetes.io/component: app-server
    app.kubernetes.io/part-of: file-upload-service
    env: staging
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: file-upload-service
    env: staging
  ports:
    - name: http
      port: 8080
