kubernetes/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'POST, OPTIONS'
    nginx.ingress.kubernetes.io/cors-allow-origin: 'https://web.latihan.jocki.me' # kpt-set: https://web.${domain}
  labels:
    app.kubernetes.io/version: v0.0.1
    env: staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.latihan.jocki.me # kpt-set: api.${domain}
      secretName: tls-secret
  rules:
    - host: api.latihan.jocki.me # kpt-set: api.${domain}
      http:
        paths:
          - path: /stock-item-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: stock-item-service
                port:
                  number: 8080
          - path: /search/(.*)
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-master
                port:
                  number: 9200
