kubernetes/ingress-files-read.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-files-read
  annotations:
    konghq.com/plugins: app-cors-plugin
    konghq.com/strip-path: 'true'
  labels:
    env: staging
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - files.latihan.jocki.me # kpt-set: files.${domain}
      secretName: tls-secret
  rules:
    - host: files.latihan.jocki.me # kpt-set: files.${domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file-upload-service
                port:
                  number: 8080
