kubernetes/ingress-files-write.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-files-write
  annotations:
    konghq.com/plugins: 'app-cors-plugin, app-jwt-plugin'
  labels:
    env: staging
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - files-default.latihan.jocki.me # kpt-set: files-${tenant}.${domain}
      secretName: tls-secret
  rules:
    - host: files-default.latihan.jocki.me # kpt-set: files-${tenant}.${domain}
      http:
        paths:
          - path: /.*/upload
            pathType: Prefix
            backend:
              service:
                name: file-upload-service
                port:
                  number: 8080
