kubernetes/ingress-files.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-files
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'POST, OPTIONS'
    nginx.ingress.kubernetes.io/cors-allow-origin: 'https://web.latihan.jocki.me' # kpt-set: https://web.${domain}
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  labels:
    app.kubernetes.io/version: v0.0.1
    env: staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - files.latihan.jocki.me # kpt-set: files.${domain}
      secretName: tls-secret
  rules:
    - host: files.latihan.jocki.me # kpt-set: files.${domain}
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: file-upload-service
                port:
                  number: 8080
