kubernetes/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  labels:
    env: staging
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - web.latihan.jocki.me # kpt-set: web.${domain}
      secretName: tls-secret
  rules:
    - host: web.latihan.jocki.me # kpt-set: web.${domain}
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: angular-web
                port:
                  number: 80
