kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "POST"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4200 https://web.jocki.me"
spec:
  tls:
    - hosts:
      - latihan.jocki.me
      - web.jocki.me
      - auth.jocki.me
      secretName: tls-secret
  rules:
    - host: web.jocki.me
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: web-service
                port:
                  number: 80
    - host: latihan.jocki.me
      http:
        paths:
          - path: /stock-item-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: stock-item-service
                port:
                  number: 8080
          - path: /search/(.*)
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-master
                port:
                  number: 9200
